Bug 94098 - FILEOPEN: SVG: items in transform's attribute list are ignored if they're separated by commas
Summary: FILEOPEN: SVG: items in transform's attribute list are ignored if they're sep...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.0.1.2 release
Hardware: Other All
: medium normal
Assignee: Xisco Faulí
URL: http://www.w3.org/TR/SVG/coords.html#...
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks: SVG-Open
  Show dependency treegraph
 
Reported: 2015-09-10 14:37 UTC by Xisco Faulí
Modified: 2018-06-20 17:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
file (327 bytes, image/svg+xml)
2015-09-10 14:37 UTC, Xisco Faulí
Details
Comparison between Libreoffice 5.0.1.2 (left) and Chrome (right) (25.38 KB, image/jpeg)
2015-09-10 14:37 UTC, Xisco Faulí
Details
attached SVG opened in FF, and as inserted into Draw (100.01 KB, image/jpeg)
2015-09-10 23:01 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2015-09-10 14:37:07 UTC
Created attachment 118574 [details]
file

According to https://developer.mozilla.org/es/docs/Web/SVG/Attribute/transform,
items in transform's attribute list can be separated by commas and/or whitespaces, however Libreoffice ignored them when there're commas.

Steps to reproduce:
1. Open attached file with Libreoffice
2. Observe

Behavior: Square 1 and 2 aren't rotated as they contain commas.
Comment 1 Xisco Faulí 2015-09-10 14:37:42 UTC
Created attachment 118575 [details]
Comparison between Libreoffice 5.0.1.2 (left) and Chrome (right)
Comment 2 Regina Henschel 2015-09-10 22:25:31 UTC
The specification does indeed allow whitespace or comma. The error does not happen, when the file is inserted into a draw page, it can only be seen when using file open.
Comment 3 V Stuart Foote 2015-09-10 23:01:14 UTC
Created attachment 118592 [details]
attached SVG opened in FF, and as inserted into Draw

@Regina, *

Yes, but we get another manifestation when inserting the SVG into a Draw session. At least on Windows...

Version: 5.0.2.1
Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7
Locale: en-US (en_US)

The three objects seem to be rotated, but the bounding box is cropped and can't seem to be adjusted.
Comment 4 Xisco Faulí 2015-09-11 10:49:13 UTC
@Stuart,

that problem is happening because width and height attributes aren't define in <svg> tag. However, another bug should be filled for this issue as the svg filter used by Libreoffice is different for File -> Open and Insert -> Image
Comment 5 Xisco Faulí 2015-10-26 11:56:51 UTC
Fix summit to gerrit: https://gerrit.libreoffice.org/#/c/19573/
Comment 6 Commit Notification 2015-11-05 09:50:57 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2fe02d55d72a808dd79ba9529bc5078a45175c16

tdf#94098: SVG: improved parsing of rotate's parameters 

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-17 06:36:28 UTC Comment hidden (obsolete)