tdf#94098: SVG: improved parsing of rotate's parameters

2nd and 3rd one can be separated by commas or spaces

Change-Id: Ie266956ddad0f23a8bf13f1292105bbe6ec60895